# FailBot

./: .env.exampe  .env.example  .gitignore  GROQ_JSON_OBJECT_MODE_REFACTORING.md  LICENSE  Project-Description.md  README.md  REFACTORING_SUMMARY.md  TOOL_BINDING_REFACTORING.md  pyproject.toml  test_code_consistency.py  test_phase3.py  test_phase4.py  test_phase5.py  test_tool_binding.py
config/: prompts.yaml
dashboard/: app.py  data_loader.py  runner.py  style.css
dashboard/components/: eval_dashboard.py  issue_viewer.py  overview.py  pipeline_view.py  run_explorer.py  run_failbot.py  sidebar.py
data/: known_errors.json
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  EVAL_WORKFLOW.md  FAILURE_MODES.md
evals/: __init__.py  eval.py  ground_truth.json  metrics.py  scoring.py
evals/results/: eval_report.md  eval_summary.json
evals/test_logs/: ci_failure_001.txt  ci_failure_002.txt  ci_failure_003.txt
src/: __init__.py  config.py  graph.py  main.py  metrics.py  state.py
src/callbacks/: __init__.py  logging_callback.py
src/nodes/: __init__.py  file_issue.py  ingest.py  parse_log.py  report.py  suggest_test.py  suggest_test_generic.py  triage.py
src/tools/: __init__.py  code_validator.py  dashboard.py  github_client.py  knowledge_base.py  langchain_tools.py
src/utils/: __init__.py  graph_utils.py  json_extractor.py  llm_factory.py  logging_config.py  metrics.py  prompt_templates.py  response_utils.py  retry.py  token_counter.py  tool_runner.py
tests/: test_eval_harness.py  test_eval_metrics.py  test_graph_utils.py  test_knowledge_base.py  test_main_exit_codes.py  test_parse_log.py  test_prompt_templates.py  test_retry.py  test_token_counter.py  test_tool_runner.py
tests/test_logs/: log.txt
