[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "failbot"
version = "0.1.0"
description = "Multi-agent CI failure triage and test generation pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
license = {text = "MIT"}

dependencies = [
    # Core LLM/Agent Framework
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-core>=0.2.0",
    "pydantic>=2.0",
    
    # LLM/API
    "openai>=1.0",
    
    # HTTP & Network
    "httpx>=0.24",
    
    # Token Counting
    "tiktoken>=0.5",
    
    # Text Processing & Search
    "rapidfuzz>=3.0",
    
    # Configuration
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    
    # Logging & Observability
    "python-json-logger>=2.0",
    "rich>=13.0",
    
    # Evaluation & Analytics
    "scikit-learn>=1.3",
    "plotly>=5.0",
    "pandas>=2.0",
    "numpy>=1.24",

    # Dashboard
    "streamlit>=1.30"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

dashboard = [
    "streamlit>=1.30"
]

[project.scripts]
failbot-dashboard = "dashboard.runner:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
